src/test/resources/30/single/xhtml/valid/issue340.xhtml
<html xmlns="http://www.w3.org/1999/xhtml">
  <head>
    <title>HTML5 main</title>
  </head>
  <body>
    <main> hello </main>
  </body>
</html>
