src/test/resources/30/single/xhtml/invalid/issue282-object-typemustmatch.xhtml
<html xmlns="http://www.w3.org/1999/xhtml">
  <head>
    <title>Object typemustmatch attribute</title>
  </head>
  <body>
    <object data="http://example.org/video.mp4" type="video/mp4" typemustmatch=""/>
   </body>
</html>